<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Background Image -->
    <ImageView
        android:id="@+id/bgImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/studentpic"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Top Text on Image -->


    <!-- Form Container -->
    <TextView
        android:id="@+id/achieveText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:layout_marginBottom="8dp"
        android:padding="16dp"
        android:text="@string/achieve_your_work_study_and_migration_goals_with_ielts"
        android:textColor="@color/background_light"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/formContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/formContainer"
        android:background="@drawable/rounded_top_form"


        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Welcome Text -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_idp_ielts"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_your_email_to_sign_in"
            android:textColor="@android:color/white"
            android:layout_marginBottom="10dp" />

        <!-- Email Field -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxCornerRadiusTopStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxBackgroundColor="@android:color/white"
            app:hintTextColor="@drawable/email_and_pass_hint_color"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:textSize="16sp"
                android:textColor="@android:color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password Field -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxCornerRadiusTopStart="5dp"
            android:id="@+id/passLayout"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxBackgroundColor="@android:color/white"
            app:hintTextColor="@drawable/email_and_pass_hint_color"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="16sp"
                android:textColor="@android:color/black" />
        </com.google.android.material.textfield.TextInputLayout>


        <!-- Sign In Button -->
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_square_red"
            android:layout_marginTop="10dp" />

        <!-- Sign Up Button -->
        <Button
            android:id="@+id/signupTv"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_square_red"
            android:layout_marginTop="8dp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
